# ml-api

./: Dockerfile  README.md  main.py  mock.json  requirements.txt  train.py
api/: Dockerfile  Dockerfile_local  build-pipeline.yml  main.py  mock2.json  requirements.txt  train.py
data/: pima-indians-diabetes.csv
models/: model_diabetes.pkl
preprocessing/: README.md  build-pipeline.yml  setup.cfg
preprocessing/src/mypreprocessing/: preprocessing.py
