[metadata]
name = mypreprocessing
version = 1.1.0
author = HumanTotalCare B.V. , R&D department, Data Science team
author_email = a.bykov@humantotalcare.nl
description = Public example repo for preprocessing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src